--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^5.3.5",
     "express-session": "^1.17.3",
     "handlebars": "^4.7.6",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
