--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "PostUp",
   "version": "1.0.0",
-  "description": "",
+  "description": "The PostUp - App for posting goods for sale",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
